fix(metrics): update spacing

--- a/app/frontend/stylesheets/frontend/partials/metrics.scss
+++ b/app/frontend/stylesheets/frontend/partials/metrics.scss
@@ -20,6 +20,10 @@
   color: darken($text-color, 20%);
 }
 
+.metrics-label {
+  margin-right: 5px;
+}
+
 .metrics-group-label {
   margin-top: 25px;
   margin-bottom: 5px;
